Actualizado a la útlima clase

--- a/CodigoCriptografia.tex
+++ b/CodigoCriptografia.tex
@@ -1,4 +1,3 @@
-% !TXS template
 \documentclass[spanish]{book}
 \usepackage[T1]{fontenc}
 \usepackage[utf8]{inputenc}
@@ -9,6 +8,7 @@
 \usepackage{multicol} 
 \usepackage{cclicenses}
 \usepackage{amsthm}
+\usepackage{graphicx}
 \usepackage[spanish]{babel} 
 \newtheorem{alg}{Algoritmo}
 \newtheorem{mydef}{Definición}
@@ -17,8 +17,8 @@
 \newtheorem{obsv}{Observación}
 \newtheorem{teorema}{Teorema}
 \newtheorem{proposi}{Proposición}
-\title{Códigos y criptografía\\ \byncsa}
-\author{José Carlos García}
+\title{Códigos y criptografía}
+\author{José Carlos García\\ \includegraphics[width=0.15\textwidth]{licencia.png}}
 \begin{document}
 \maketitle
 \tableofcontents
@@ -324,4 +324,6 @@ Gracias a que es una estructura lineal, el código podemos simplificarlo teniend
 \section{Criptosistemas simétricos}
 \section{Criptosistemas de clave pública}
 
+\chapter*{Autoría}
+Estas notas se han realizado en base a los apuntes de clase del profesor \textbf{Bartolomé López Jiménez} de la Universidad de Cádiz.
 \end{document}
